# project-skeleton

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
